--- a/public/slides/2020s1STA5173_0/l7_reshaping_data.Rmd
+++ b/public/slides/2020s1STA5173_0/l7_reshaping_data.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "STA 326 2.0 Programming and Data Analysis with R"
+title: "STA 517 3.0 Programming and Statistical Computing with R"
 subtitle: "Reshaping Data"
 author: "Dr Thiyanga Talagala"
-date: "Online distance learning/teaching materials during the COVID-19 outbreak."
+date: "27 September 2020"
 output:
   xaringan::moon_reader:
     chakra: libs/remark-latest.min.js
