--- a/static/Slides/isf2020/ISF_2020_Thiyanga_S_Talagala.Rmd
+++ b/static/Slides/isf2020/ISF_2020_Thiyanga_S_Talagala.Rmd
@@ -399,7 +399,7 @@ lst <- list(
   d = rnorm(18),
   e = c(rnorm(12), x[1:7]+ rep(5, 7)),
   f = rnorm(20),
-  g = c(y, rnorm(1), y),
+  g = c(y, rnorm(1), y[1:7]),
   h = c(rnorm(19)), 
   i = c(x[1:10], rnorm(4), x))
 
