--- a/public/slides/2020s1STA5173_0/l10.Rmd
+++ b/public/slides/2020s1STA5173_0/l10.Rmd
@@ -749,21 +749,11 @@ model3_fitresid <- broom::augment(model3)
 model3_fitresid
 ```
 
-If the original outcome
-variable used to fit the model is not included in newdata, then no `.resid` column will be included
-in the output.
+If the variables used to fit the model are not included in data, then no `.resid` column will be included in the output.
 
 When you transform variables (say a log transformation), augment will not display `.resid` column. 
 
-Augment will often behave differently depending on whether data or newdata is given. This is because there is often information associated with training observations (such as influences or related)
-measures that is not meaningfully defined for new observations.
 
----
-Users may pass data to augment via either the `data` argument or the `newdata` argument. 
-
-If the user passes data to the data argument, it must be exactly the data that was used to fit the model object.
-
-Pass datasets to newdata to augment data that was not used during model fitting. This still requires that at least all predictor variable columns used to fit the model are present. If the original outcome variable used to fit the model is not included in newdata, then no `.resid` column will be included in the output.
 
 ---
 
