--- a/static/Slides/2020s1STA5173_0/l14.Rmd
+++ b/static/Slides/2020s1STA5173_0/l14.Rmd
@@ -77,7 +77,7 @@ library(emo)
 ![](bootstrap.png)
 
 
-- Bootstrapping does not new data set from the population. 
+- Bootstrapping does not take new from the population. 
 
 - It treats the original sample as a proxy for the real population and then draws random samples from it. 
 
@@ -127,7 +127,7 @@ height
 
 2. Calculate the sample mean for each of the resamples. 
 
-3. Make a histogram of the means of the 100 bootstrap samples. This is the bootstrap distribution.
+3. Make a histogram of the means of the 1000 bootstrap samples. This is the bootstrap distribution.
 
 4.  Calculate the bootstrap standard error. 
 
@@ -138,7 +138,7 @@ Help:
 
 $$\bar{X*} = \frac{1}{N}\sum_{i=1}^N\bar{x}_{i}^{bootstrap}$$
 
-$$se(\bar{X*}) =\sqrt{\frac{1}{B-1}\sum_{i=1}^N (\bar{x}_{i}^{bootstrap} - \bar{X*})^2}$$
+$$se(\bar{X*}) =\sqrt{\frac{1}{N-1}\sum_{i=1}^N (\bar{x}_{i}^{bootstrap} - \bar{X*})^2}$$
 
 The bootstrap standard error, of a statistic is the standard deviation of the bootstrap distribution of that statistic.
 
