--- a/content/post/plotaxis.Rmd
+++ b/content/post/plotaxis.Rmd
@@ -40,7 +40,7 @@ The ggplot2 package `element text` can be used to alter the label angles as well
 ```{r, fig.height=5, fig.height=5}
 library(palmerpenguins)
 penguins %>%
-  ggplot(aes(x=species, col=species)) + geom_bar() +
+  ggplot(aes(x=species, fill=species)) + geom_bar() +
   theme(axis.text.x=element_text(angle=30))
 ```
 
@@ -48,7 +48,7 @@ penguins %>%
 
 ```{r}
 penguins %>%
-  ggplot(aes(x=species, col=species)) + geom_bar() +
+  ggplot(aes(x=species, fill=species)) + geom_bar() +  scale_fill_manual(values=c("#1b9e77", "#d95f02", "#7570b3")) + 
   theme(axis.text.x=element_text(angle=30, vjust=.8, hjust=0.8))
 ```
 
