--- a/content/post/logisticregression.Rmd
+++ b/content/post/logisticregression.Rmd
@@ -45,19 +45,23 @@ ggplotly(p1)
 ## Missing values exploration
 
 ```{r}
+vis_miss(penguins)
+```
+
+## Remove missing values
+
+```{r}
 penguins_omit <- penguins %>%
   na.omit()
 vis_miss(penguins_omit)
 ```
-
-## Remove missing values
 
 ## Building logistic regression
 
 Then, using the other variables in the dataset, I'll create a logistic regression model to predict the gender of the palmer penguins. Before beginning to build the model, double-check that all qualitative variables have been saved as factors.
 
 
-```{r}
+```{r, fig.height=13, fig.width=13}
 fit <- glm(sex ~ species + island + bill_length_mm + bill_depth_mm + flipper_length_mm + body_mass_g, data=penguins_omit, family="binomial")
 summary(fit)
 ```
@@ -88,3 +92,15 @@ exp(confint.default(fit))
 We can write the estimated logistic regression model as follows
 
 $$\phi(z) = \frac{1}{1+e^{-z}} = \frac{1}{e^{-80.83 -7.40Chinstrap -8.42Gentoo +0.32Dream -0.50Torgersen + 0.61 bill\_length\_mm + 1.64 bill\_depth\_mm + 0.02 flipper\_length\_mm + 0.005 body\_mass\_g}}$$
+
+## Interpretation of parameter estimates
+
+The variables species, bill length (mm), bill depth (mm) and body mass (g) significantly contribute to the model.
+
+Holding all other variables constant, this fitted model predicts that the odds of detecting a female are 1.38 times higher for penguins on Dream Island than on Biscoe.
+
+
+The odds of detecting a female increased 1.005 times (95%CI 1.003–1.007) for each one-unit
+increase in the body mass (g).
+
+> Model Evaluation: Next Post! Model evaluation should be done before interpreting the model. 
